stats - added material chart, fixed flex wrapping on 2 objects

--- a/frontend/garbage-angular/src/app/core/stats/stats.component.scss
+++ b/frontend/garbage-angular/src/app/core/stats/stats.component.scss
@@ -11,7 +11,7 @@
 .chart {
   margin: 4%;
   flex-grow: 0;
-  flex-basis: fit-content;
+  flex-basis: 40%;
   text-align: center;
   color: darkslategrey;
   font-weight: bold;
